--- a/components/layout/head.html
+++ b/components/layout/head.html
@@ -1,10 +1,10 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>{{ title | Cogistics }}</title>
-<meta name="title" content="{{ metaTitle | Cogistics }}" />
+<title>{{ title | <template_name> }}</title>
+<meta name="title" content="{{ metaTitle | <template_name> }}" />
 <meta
   name="description"
-  content="{{ metaDescription | Cogistics — a simple HTML starter with Tailwind CSS and component includes. }}"
+  content="{{ metaDescription | <template_name> — a simple HTML starter with Tailwind CSS and component includes. }}"
 />
 <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4.1.14"></script>
 <style type="text/tailwindcss">
